# EMR-Py

./: README.md  pyproject.toml
.github/workflows/: code-quality.yml  release.yml
examples/: get_root_path.ipynb  get_root_path.py
examples/viz/: finantial_timeseries.ipynb
src/emrpy/: __init__.py  decorators.py  really_utils.py  telegrambot.py
src/emrpy/data/: loaders.py
src/emrpy/logging/: logger_config.py
src/emrpy/logutils/: logger_config.py
src/emrpy/ml/: encoders.py
src/emrpy/visualization/: timeseries.py
src/emrpylibrary/: decorators.py  encoders.py
src/er_custom_module/: __init__.py  math_example.py
tests/: test_encoders.py  test_example.py  test_loaders.py  test_logger_config.py  test_telegram_bot.py
