[project]
name = "er-custom-module"
version = "0.1.0"
description = "My custom library for data science and machine learning projects"
readme = "README.md"
authors = [
    { name = "Ezequiel Rivero", email = "ezequielmrivero@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "pytest>=8.3.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
