[project]
name = "emr-py"
version = "0.2.0"
description = "My custom library for data science and machine learning projects"
readme = "README.md"
authors = [
    { name = "Ezequiel Rivero", email = "ezequielmrivero@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.1",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/emrpy"]

[tool.ruff]
line-length = 100

[dependency-groups]
dev = [
    "pyright>=1.1.391",
    "pytest>=8.3.4",
    "ruff>=0.9.1",
]
